[tool.poetry]
name = "threat-reporter"
version = "0.1.0"
description = ""
authors = ["Alexey Rubaseff <alexey.rubasheff@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.40.0"
telethon = "^1.33.1"
global-logger = "*"

[tool.poetry.group.dev.dependencies]
pip = "^24.0"
poetry = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
